[package]
name = "banshee"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0", features = ["latest"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0"
anyhow = "1.0.86"
chrono = "0"